@startuml Sistema de reservas para cine

class Asiento {

    - estado : boolean
    + Asiento ()
    + LiberarAsiento() : boolean
    + ReservarAsiento() : boolean
    + MostrarEstado() : String
}

class Sala{
    - salaC : Arraylist<Arraylist<Asiento>>
    + Sala(filas : int, columnas : int)
    + LiberarAsiento(fila : int, columna : int) : boolean
    + ReservarAsiento(fila : int, columna : int) : boolean
    + MostrarEstado() : void
}

class Cine{
    - cineC : Arraylist<Arraylist<Sala>>
    - cancelaciones : Cancelaciones
    - espera : Espera
    + Cine(funciones : int, salas : int, filas : int, columnas : int)
    + LiberarAsiento(sala : int, funcion : int, fila : int, columna : int) : void
    + ReservarAsiento(sala : int, funcion : int, fila : int, columna : int) : void
    + MostrarEstado(sala : int, funcion : int) : void
    + MostrarCancelaciones() : void
    + MostrarEsperas() : void
    + DeshacerCancelacion() : void
}

class Reserva {
    + main(String[] args) : void
    + LimpiarConsola() : void
}

class Cancelaciones{
    - cancelacionesC = Stack <String>
    + Cancelaciones()
    + AgregarCancelaciones(funciones : int, salas : int, filas : int, columnas : int) : void
    + MostrarCancelaciones() : void
    + DeshacerCancelacion(Cine: ArrayList<ArrayList<Sala>>) : String
}

class Espera{
    - esperaC = Queue <String>
    + Espera()
    + AgregarEspera(funciones : int, salas : int, filas : int, columnas : int) : void
    + MostrarEspera() : void
    + DeshacerEspera() : String
    + EliminarEspera() : void
}

Cine *--- Sala
Sala *--- Asiento
Reserva ..> Cine : crea >
Cancelaciones --|> Cine 
Espera --|> Cine 

@enduml
